<resources>
    <string name="app_name">Bicycle</string>
    <string name="shoping">Shoping</string>
    <string name="user_name">User Name  :</string>
    <string name="type_valid_username">type valid username</string>
    <string name="phone_number">Phone Number</string>
    <string name="xxxxxxxxxx">XXXXXXXXXX</string>
    <string name="email_address">Email Address</string>
    <string name="email_hint">email@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">**********</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address  :</string>
    <string name="email">Email address :</string>
    <string name="phone">Phone number :</string>
    <string name="login_info">Login info</string>
    <string name="login">Login</string>
    <string name="forgit_password">Forgit password ?</string>
    <string name="or">or</string>
    <string name="reset_password">Reset your password</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit rating</string>
    <string name="check_intenet_connection">Check your internet connection</string>
    <string name="do_you_want_to_close_app">Do you want to close app?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="profile_details">Profile Details</string>
    <string name="details">Details   :</string>
    <string name="submit_profile">Submit</string>
    <string name="birth_date">Birth date  :</string>
    <string name="ok">Ok</string>
    <string name="no_change">no change</string>
    <string name="new_account">New Account</string>
    <string name="material_details">Material Details  :</string>
    <string name="material_name">Material name  :</string>
    <string name="price">Price :</string>
    <string name="provided_by">Provided by</string>
    <string name="material_photo">Material Photo</string>
    <string name="add_material_photo">Add material photo</string>
    <string name="new_material">New material</string>
    <string name="edit_profile">Edit profile</string>
    <string name="materials">Materials</string>
    <string name="events">Events</string>
    <string name="edit_material">Edit material</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="members">Members :</string>
    <string name="start_date">Start date : </string>
    <string name="end_date">End date :</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="join">Join</string>
    <string name="event_name">Event name</string>
    <string name="new_event">New Event</string>
    <string name="participant_num">Participant number :</string>
    <string name="start_time">Start time :</string>
    <string name="end_time">End time :</string>
    <string name="description">Descrition :</string>
    <string name="objectives">Objectives</string>
    <string name="un_join">Unjoin</string>
    <string name="this_event_is_complete">This event is complete</string>
</resources>