<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        app:contentInsetEnd="0dp"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/toolbar"
                android:text="@string/new_material"
                android:background="@drawable/button_gradient"
                android:textSize="44sp"
                android:textColor="@color/white"
                android:translationZ="1dp"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/yellowtail"/>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/getMore"
        android:background="#f6ffff"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="200dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/add_material_photo"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="italic"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/material_photo"
                    android:layout_centerInParent="true"
                    android:id="@+id/photo"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:id="@+id/camera"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_high_contrast_camera_photo"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="12dp"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/material_name"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/materialName"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/price"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/price"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/details"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/details"
                    android:textSize="16sp"
                    android:lines="5"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textColorLink="#FF0000"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/submit_profile"
                android:background="@drawable/button_gradient"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="32dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:id="@+id/submit"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>




