<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        app:contentInsetEnd="0dp"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/toolbar"
                android:text="@string/new_event"
                android:background="@drawable/button_gradient"
                android:textSize="44sp"
                android:textColor="@color/white"
                android:translationZ="1dp"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/yellowtail"/>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/getMore"
        android:background="#f6ffff"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/event_name"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/eventName"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/participant_num"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/participants"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/start_date"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/startDate"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/start_time"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/startTime"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/end_date"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/endDate"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/end_time"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/endTime"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/objectives"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/objectives"
                    android:textSize="16sp"
                    android:lines="5"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textColorLink="#FF0000"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/description"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start|center"
                    android:textStyle="bold"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/description"
                    android:textSize="16sp"
                    android:lines="5"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textColorLink="#FF0000"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/submit_profile"
                android:background="@drawable/button_gradient"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="32dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:id="@+id/create"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>




