<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/name"
            android:text="Car rali in ryad"
            android:textStyle="bold"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:paddingStart="8dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/members"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:paddingStart="8dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:id="@+id/members"
            android:text="112"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:paddingStart="8dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:padding="8dp"
        android:textStyle="italic"
        android:text="ajdhaw ef awe f aew f a ef aw   erf aer f ae r f ae rf \nwjhegfjwefhwe"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/from"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:paddingStart="8dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:id="@+id/startDate"
            android:text="@string/members"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:paddingStart="8dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/to"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:paddingStart="8dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:id="@+id/endDate"
            android:text="@string/members"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:paddingStart="8dp"/>
    </LinearLayout>
</LinearLayout>